--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "mongoose": "^5.6.1"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {  
+    "say-hello": "echo 'Hello World'",    
+    "awesome-npm": "npm run say-hello && echo 'echo NPM is awesome!'", 
+    "clean": "rm -r dist && mkdir dist",    
+    "build": "npm run clean && webpack"
+
   },
   "author": "",
   "license": "ISC"
