--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {  
+    "js-add": "node add.js",
     "bash-hello": "bash hello.sh",
     "say-hello": "echo 'Hello World'",    
     "awesome-npm": "npm run say-hello && echo 'echo NPM is awesome!'", 
