error w/ npm link

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "cli-crud-node",
+  "name": "contact",
+  "preferGlobal": true,
+  "bin": "./contact.js",
   "version": "1.0.0",
   "description": "A CLI initiated Node.js CRUD app ",
   "main": "index.js",
   "dependencies": {
     "commander": "^2.20.0",
+    "express": "^4.17.1",
     "inquirer": "^6.4.1",
     "mongoose": "^5.6.1"
   },
